//! HTTP Integration tests for SMS service
//! SMS服务的HTTP集成测试
//!
//! These tests verify the end-to-end functionality of HTTP REST API
//! 这些测试验证HTTP REST API的端到端功能

use axum_test::TestServer;
use serde_json::json;
use spear_next::sms::gateway::create_gateway_router;
use spear_next::sms::gateway::GatewayState;
use tokio_util::sync::CancellationToken;
use uuid::Uuid;

// Test utilities for HTTP integration / HTTP集成测试工具
mod http_test_utils {
    use super::*;
    use spear_next::proto::sms::node_service_server::NodeServiceServer;
    use spear_next::proto::sms::placement_service_server::PlacementServiceServer;
    use spear_next::proto::sms::task_service_server::TaskServiceServer;
    use std::net::SocketAddr;
    use std::time::Duration;
    use tokio::net::TcpListener;
    use tokio::time::sleep;
    use tonic::transport::Server;

    /// Create a test gRPC server / 创建测试gRPC服务器
    pub async fn create_test_grpc_server() -> (SocketAddr, tokio::task::JoinHandle<()>) {
        let listener = TcpListener::bind("127.0.0.1:0").await.unwrap();
        let addr = listener.local_addr().unwrap();

        let storage_config = spear_next::config::base::StorageConfig {
            backend: "memory".to_string(),
            ..Default::default()
        };
        let service =
            spear_next::sms::service::SmsServiceImpl::with_storage_config(&storage_config).await;

        let handle = tokio::spawn(async move {
            let service_node = service.clone();
            let service_task = service.clone();
            Server::builder()
                .add_service(NodeServiceServer::new(service_node))
                .add_service(TaskServiceServer::new(service_task))
                .add_service(PlacementServiceServer::new(service))
                .serve_with_incoming(tokio_stream::wrappers::TcpListenerStream::new(listener))
                .await
                .unwrap();
        });

        // Wait for server to start / 等待服务器启动
        sleep(Duration::from_millis(500)).await;

        (addr, handle)
    }

    /// Create a test HTTP server / 创建测试HTTP服务器
    pub async fn create_test_http_server() -> (TestServer, tokio::task::JoinHandle<()>) {
        // Start a test gRPC server / 启动测试gRPC服务器
        let (grpc_addr, grpc_handle) = create_test_grpc_server().await;

        // Connect to the test gRPC server / 连接到测试gRPC服务器
        let channel = tonic::transport::Channel::from_shared(format!("http://{}", grpc_addr))
            .unwrap()
            .connect()
            .await
            .expect("Failed to connect to test gRPC server");
        let sms_client =
            spear_next::proto::sms::node_service_client::NodeServiceClient::new(channel.clone());
        let task_client =
            spear_next::proto::sms::task_service_client::TaskServiceClient::new(channel.clone());
        let placement_client =
            spear_next::proto::sms::placement_service_client::PlacementServiceClient::new(
                channel.clone(),
            );
        let instance_registry_client =
            spear_next::proto::sms::instance_registry_service_client::InstanceRegistryServiceClient::new(
                channel.clone(),
            );
        let execution_registry_client =
            spear_next::proto::sms::execution_registry_service_client::ExecutionRegistryServiceClient::new(
                channel.clone(),
            );
        let execution_index_client =
            spear_next::proto::sms::execution_index_service_client::ExecutionIndexServiceClient::new(
                channel.clone(),
            );
        let mcp_registry_client =
            spear_next::proto::sms::mcp_registry_service_client::McpRegistryServiceClient::new(
                channel.clone(),
            );
        let backend_registry_client =
            spear_next::proto::sms::backend_registry_service_client::BackendRegistryServiceClient::new(
                channel.clone(),
            );
        let state = GatewayState {
            node_client: sms_client,
            task_client,
            placement_client,
            instance_registry_client,
            execution_registry_client,
            execution_index_client,
            mcp_registry_client,
            backend_registry_client,
            cancel_token: CancellationToken::new(),
            max_upload_bytes: 64 * 1024 * 1024,
        };
        let app = create_gateway_router(state);
        (
            TestServer::new(app.into_make_service()).unwrap(),
            grpc_handle,
        )
    }

    /// Generate test node JSON / 生成测试节点JSON
    pub fn generate_test_node_json() -> (String, serde_json::Value) {
        let uuid = Uuid::new_v4().to_string();
        let node_json = json!({
            "ip_address": "192.168.1.100",
            "port": 8080,
            "metadata": {
                "region": "us-west",
                "env": "test"
            }
        });
        (uuid, node_json)
    }

    /// Generate test resource JSON / 生成测试资源JSON
    pub fn generate_test_resource_json() -> serde_json::Value {
        json!({
            "cpu_usage_percent": 75.5,
            "memory_usage_percent": 82.3,
            "total_memory_bytes": 16000000000u64,
            "used_memory_bytes": 13168000000u64,
            "available_memory_bytes": 2832000000u64,
            "disk_usage_percent": 45.2,
            "total_disk_bytes": 1000000000000u64,
            "used_disk_bytes": 452000000000u64,
            "network_rx_bytes_per_sec": 1048576u64,
            "network_tx_bytes_per_sec": 524288u64,
            "load_average_1m": 1.25,
            "load_average_5m": 1.15,
            "load_average_15m": 1.05,
            "resource_metadata": {
                "gpu_count": "2"
            }
        })
    }
}

#[tokio::test]
async fn test_http_node_lifecycle() {
    // Test complete node lifecycle via HTTP API / 通过HTTP API测试完整的节点生命周期
    let (server, _grpc_handle) = http_test_utils::create_test_http_server().await;
    let (_uuid, node_json) = http_test_utils::generate_test_node_json();

    // 1. Register node / 注册节点
    let register_response = server.post("/api/v1/nodes").json(&node_json).await;

    register_response.assert_status(axum::http::StatusCode::CREATED);
    let register_body: serde_json::Value = register_response.json();
    assert_eq!(register_body["success"], true);
    let created_uuid = register_body["node_uuid"].as_str().unwrap();

    // 2. Get node / 获取节点
    let get_response = server.get(&format!("/api/v1/nodes/{}", created_uuid)).await;

    get_response.assert_status_ok();
    let get_body: serde_json::Value = get_response.json();
    assert_eq!(get_body["node"]["uuid"], created_uuid);
    assert_eq!(get_body["node"]["ip_address"], "192.168.1.100");
    assert_eq!(get_body["node"]["port"], 8080);
    assert_eq!(get_body["node"]["status"], "online");

    // 3. Update node / 更新节点
    let update_json = json!({
        "ip_address": "192.168.1.101",
        "port": 8081,
        "status": "active",
        "metadata": {
            "region": "us-east",
            "env": "production",
            "updated": "true"
        }
    });

    let update_response = server
        .put(&format!("/api/v1/nodes/{}", created_uuid))
        .json(&update_json)
        .await;

    update_response.assert_status_ok();
    let update_body: serde_json::Value = update_response.json();
    assert_eq!(update_body["success"], true);

    // 4. Verify update / 验证更新
    let get_updated_response = server.get(&format!("/api/v1/nodes/{}", created_uuid)).await;

    get_updated_response.assert_status_ok();
    let get_updated_body: serde_json::Value = get_updated_response.json();
    assert_eq!(get_updated_body["node"]["ip_address"], "192.168.1.101");
    assert_eq!(get_updated_body["node"]["port"], 8081);
    assert_eq!(get_updated_body["node"]["metadata"]["region"], "us-east");
    assert_eq!(get_updated_body["node"]["metadata"]["updated"], "true");

    // 5. Heartbeat / 心跳
    let heartbeat_json = json!({
        "health_info": {
            "cpu_usage": "45.2",
            "memory_usage": "67.8"
        }
    });

    let heartbeat_response = server
        .post(&format!("/api/v1/nodes/{}/heartbeat", created_uuid))
        .json(&heartbeat_json)
        .await;

    heartbeat_response.assert_status_ok();
    let heartbeat_body: serde_json::Value = heartbeat_response.json();
    assert_eq!(heartbeat_body["success"], true);

    // 6. List nodes / 列出节点
    let list_response = server.get("/api/v1/nodes").await;

    list_response.assert_status_ok();
    let list_body: serde_json::Value = list_response.json();
    let nodes = list_body["nodes"].as_array().unwrap();
    assert!(!nodes.is_empty());
    assert!(nodes.iter().any(|n| n["uuid"] == created_uuid));

    // 7. List nodes with status filter using native Axum test / 使用原生 Axum 测试按状态过滤列出节点
    use axum::http::{Method, Request};
    use tower::ServiceExt;

    // Create a new state for native test / 为原生测试创建新的状态
    let (grpc_addr_filter, _grpc_handle_filter) = http_test_utils::create_test_grpc_server().await;
    let channel_filter =
        tonic::transport::Channel::from_shared(format!("http://{}", grpc_addr_filter))
            .unwrap()
            .connect()
            .await
            .expect("Failed to connect to test gRPC server");
    let sms_client_filter =
        spear_next::proto::sms::node_service_client::NodeServiceClient::new(channel_filter.clone());
    let task_client_filter =
        spear_next::proto::sms::task_service_client::TaskServiceClient::new(channel_filter.clone());
    let placement_client_filter =
        spear_next::proto::sms::placement_service_client::PlacementServiceClient::new(
            channel_filter.clone(),
        );
    let instance_registry_client_filter =
        spear_next::proto::sms::instance_registry_service_client::InstanceRegistryServiceClient::new(
            channel_filter.clone(),
        );
    let execution_registry_client_filter =
        spear_next::proto::sms::execution_registry_service_client::ExecutionRegistryServiceClient::new(
            channel_filter.clone(),
        );
    let execution_index_client_filter =
        spear_next::proto::sms::execution_index_service_client::ExecutionIndexServiceClient::new(
            channel_filter.clone(),
        );
    let mcp_registry_client_filter =
        spear_next::proto::sms::mcp_registry_service_client::McpRegistryServiceClient::new(
            channel_filter.clone(),
        );
    let backend_registry_client_filter =
        spear_next::proto::sms::backend_registry_service_client::BackendRegistryServiceClient::new(
            channel_filter.clone(),
        );
    let filter_state = GatewayState {
        node_client: sms_client_filter,
        task_client: task_client_filter,
        placement_client: placement_client_filter,
        instance_registry_client: instance_registry_client_filter,
        execution_registry_client: execution_registry_client_filter,
        execution_index_client: execution_index_client_filter,
        mcp_registry_client: mcp_registry_client_filter,
        backend_registry_client: backend_registry_client_filter,
        cancel_token: CancellationToken::new(),
        max_upload_bytes: 64 * 1024 * 1024,
    };

    let filter_app = create_gateway_router(filter_state);
    let filter_request = Request::builder()
        .method(Method::GET)
        .uri("/api/v1/nodes?status=active")
        .body(axum::body::Body::empty())
        .unwrap();

    let filter_response = filter_app.oneshot(filter_request).await.unwrap();
    assert_eq!(filter_response.status(), 200);

    let filter_body_bytes = axum::body::to_bytes(filter_response.into_body(), usize::MAX)
        .await
        .unwrap();
    let filter_body_str = String::from_utf8(filter_body_bytes.to_vec()).unwrap();
    let list_active_body: serde_json::Value = serde_json::from_str(&filter_body_str).unwrap();
    let _active_nodes = list_active_body["nodes"].as_array().unwrap();
    // Note: This will be empty because it's a different gRPC server instance
    // but the important thing is that the query parameter parsing works
    println!(
        "Filtered nodes response: {}",
        serde_json::to_string_pretty(&list_active_body).unwrap()
    );

    // 8. Delete node / 删除节点
    let delete_response = server
        .delete(&format!("/api/v1/nodes/{}", created_uuid))
        .await;

    delete_response.assert_status_ok();
    let delete_body: serde_json::Value = delete_response.json();
    assert_eq!(delete_body["success"], true);

    // 9. Verify deletion / 验证删除
    let get_deleted_response = server.get(&format!("/api/v1/nodes/{}", created_uuid)).await;

    get_deleted_response.assert_status_not_found();
}

#[tokio::test]
async fn test_http_resource_management() {
    // Test resource management via HTTP API / 通过HTTP API测试资源管理
    let (server, _grpc_handle) = http_test_utils::create_test_http_server().await;
    let (_uuid, node_json) = http_test_utils::generate_test_node_json();

    // 1. Register node first / 首先注册节点
    let register_response = server.post("/api/v1/nodes").json(&node_json).await;

    register_response.assert_status(axum::http::StatusCode::CREATED);
    let register_body: serde_json::Value = register_response.json();
    let created_uuid = register_body["node_uuid"].as_str().unwrap();

    // 2. Update node resource / 更新节点资源
    let resource_json = http_test_utils::generate_test_resource_json();

    let update_resource_response = server
        .put(&format!("/api/v1/nodes/{}/resource", created_uuid))
        .json(&resource_json)
        .await;

    update_resource_response.assert_status_ok();
    let update_resource_body: serde_json::Value = update_resource_response.json();
    assert_eq!(update_resource_body["success"], true);

    // 3. Get node resource / 获取节点资源
    let get_resource_response = server
        .get(&format!("/api/v1/nodes/{}/resource", created_uuid))
        .await;

    get_resource_response.assert_status_ok();
    let get_resource_body: serde_json::Value = get_resource_response.json();
    assert_eq!(get_resource_body["node_uuid"], created_uuid);
    // Use approximate comparison for floating point values
    assert!((get_resource_body["cpu_usage_percent"].as_f64().unwrap() - 75.5).abs() < 0.1);
    assert!((get_resource_body["memory_usage_percent"].as_f64().unwrap() - 82.3).abs() < 0.1);
    assert_eq!(get_resource_body["resource_metadata"]["gpu_count"], "2");

    // 4. List all node resources / 列出所有节点资源
    let list_resources_response = server.get("/api/v1/resources").await;

    list_resources_response.assert_status_ok();
    let list_resources_body: serde_json::Value = list_resources_response.json();
    let resources = list_resources_body["resources"].as_array().unwrap();
    assert!(!resources.is_empty());
    assert!(resources.iter().any(|r| r["node_uuid"] == created_uuid));

    // 5. List resources with node UUID filter / 按节点UUID过滤列出资源
    // Use native Axum testing for query parameters due to axum-test limitations
    // 由于 axum-test 的限制，对查询参数使用原生 Axum 测试
    let (grpc_addr_filter, _grpc_handle_filter) = http_test_utils::create_test_grpc_server().await;
    let channel_filter =
        tonic::transport::Channel::from_shared(format!("http://{}", grpc_addr_filter))
            .unwrap()
            .connect()
            .await
            .expect("Failed to connect to test gRPC server");
    let sms_client_filter =
        spear_next::proto::sms::node_service_client::NodeServiceClient::new(channel_filter.clone());
    let task_client_filter =
        spear_next::proto::sms::task_service_client::TaskServiceClient::new(channel_filter.clone());
    let placement_client_filter =
        spear_next::proto::sms::placement_service_client::PlacementServiceClient::new(
            channel_filter.clone(),
        );
    let instance_registry_client_filter =
        spear_next::proto::sms::instance_registry_service_client::InstanceRegistryServiceClient::new(
            channel_filter.clone(),
        );
    let execution_registry_client_filter =
        spear_next::proto::sms::execution_registry_service_client::ExecutionRegistryServiceClient::new(
            channel_filter.clone(),
        );
    let execution_index_client_filter =
        spear_next::proto::sms::execution_index_service_client::ExecutionIndexServiceClient::new(
            channel_filter.clone(),
        );
    let mcp_registry_client_filter =
        spear_next::proto::sms::mcp_registry_service_client::McpRegistryServiceClient::new(
            channel_filter.clone(),
        );
    let backend_registry_client_filter =
        spear_next::proto::sms::backend_registry_service_client::BackendRegistryServiceClient::new(
            channel_filter.clone(),
        );
    let state = GatewayState {
        node_client: sms_client_filter,
        task_client: task_client_filter,
        placement_client: placement_client_filter,
        instance_registry_client: instance_registry_client_filter,
        execution_registry_client: execution_registry_client_filter,
        execution_index_client: execution_index_client_filter,
        mcp_registry_client: mcp_registry_client_filter,
        backend_registry_client: backend_registry_client_filter,
        cancel_token: CancellationToken::new(),
        max_upload_bytes: 64 * 1024 * 1024,
    };
    let app = create_gateway_router(state);

    let request = axum::http::Request::builder()
        .method("GET")
        .uri(format!("/api/v1/resources?node_uuids={}", created_uuid))
        .body(axum::body::Body::empty())
        .unwrap();

    let response = tower::ServiceExt::oneshot(app, request).await.unwrap();
    assert_eq!(response.status(), axum::http::StatusCode::OK);

    let body_bytes = axum::body::to_bytes(response.into_body(), usize::MAX)
        .await
        .unwrap();
    let list_filtered_body: serde_json::Value = serde_json::from_slice(&body_bytes).unwrap();
    let _filtered_resources = list_filtered_body["resources"].as_array().unwrap();

    // The filtered query uses a different gRPC server instance, so it won't have the data
    // from the main test. For now, we'll just verify the query parameter parsing works
    // by checking that we get a valid response structure.
    // 过滤查询使用了不同的gRPC服务器实例，所以不会有主测试的数据
    // 现在我们只验证查询参数解析工作正常，通过检查我们得到有效的响应结构
    assert!(list_filtered_body["resources"].is_array());
    // Note: The length might be 0 because this uses a separate gRPC server instance
    // 注意：长度可能为0，因为这使用了单独的gRPC服务器实例

    // 6. Get node with resource / 获取节点及其资源
    let get_with_resource_response = server
        .get(&format!("/api/v1/nodes/{}/with-resource", created_uuid))
        .await;

    get_with_resource_response.assert_status_ok();
    let get_with_resource_body: serde_json::Value = get_with_resource_response.json();
    // 验证响应包含节点和资源信息 / Verify response contains node and resource information
    assert!(get_with_resource_body["uuid"].is_string());
    assert!(get_with_resource_body["resource"].is_object());
    assert_eq!(get_with_resource_body["uuid"], created_uuid);
    assert!(get_with_resource_body["resource"]["total_memory_bytes"].is_number());
}

#[tokio::test]
async fn test_http_error_handling() {
    // Test HTTP error handling / 测试HTTP错误处理
    let (server, _grpc_handle) = http_test_utils::create_test_http_server().await;
    let non_existent_uuid = Uuid::new_v4().to_string();

    // 1. Get non-existent node / 获取不存在的节点
    let get_response = server
        .get(&format!("/api/v1/nodes/{}", non_existent_uuid))
        .await;

    get_response.assert_status_not_found();
    let get_body: serde_json::Value = get_response.json();
    assert_eq!(get_body["success"], false);
    assert!(get_body["error"].as_str().unwrap().contains("not found"));

    // 2. Update non-existent node / 更新不存在的节点
    let update_json = json!({
        "ip_address": "192.168.1.100",
        "port": 8080
    });

    let update_response = server
        .put(&format!("/api/v1/nodes/{}", non_existent_uuid))
        .json(&update_json)
        .await;

    update_response.assert_status_not_found();

    // 3. Delete non-existent node / 删除不存在的节点
    let delete_response = server
        .delete(&format!("/api/v1/nodes/{}", non_existent_uuid))
        .await;

    delete_response.assert_status_not_found();

    // 4. Heartbeat for non-existent node / 对不存在的节点进行心跳
    let heartbeat_json = json!({
        "health_info": {}
    });

    let heartbeat_response = server
        .post(&format!("/api/v1/nodes/{}/heartbeat", non_existent_uuid))
        .json(&heartbeat_json)
        .await;

    heartbeat_response.assert_status_not_found();

    // 5. Invalid JSON payload / 无效的JSON载荷
    let invalid_json = "{ invalid json }";

    let invalid_register_response = server
        .post("/api/v1/nodes")
        .add_header(
            axum::http::header::CONTENT_TYPE,
            axum::http::HeaderValue::from_static("application/json"),
        )
        .text(invalid_json)
        .await;

    invalid_register_response.assert_status(axum::http::StatusCode::UNSUPPORTED_MEDIA_TYPE); // Unsupported Media Type for invalid JSON

    // 6. Missing required fields / 缺少必需字段
    let incomplete_json = json!({
        "port": 8080
        // missing ip_address
    });

    let incomplete_register_response = server.post("/api/v1/nodes").json(&incomplete_json).await;

    incomplete_register_response.assert_status(axum::http::StatusCode::UNPROCESSABLE_ENTITY); // Missing required fields

    // 7. Invalid UUID format / 无效的UUID格式
    let invalid_uuid_response = server.get("/api/v1/nodes/invalid-uuid-format").await;

    invalid_uuid_response.assert_status(axum::http::StatusCode::INTERNAL_SERVER_ERROR);
}

#[tokio::test]
async fn test_http_openapi_endpoints() {
    // Test OpenAPI and documentation endpoints / 测试OpenAPI和文档端点
    let (server, _grpc_handle) = http_test_utils::create_test_http_server().await;

    // 1. Test OpenAPI JSON endpoint / 测试OpenAPI JSON端点
    let openapi_response = server.get("/api/openapi.json").await;

    openapi_response.assert_status_ok();
    let openapi_body: serde_json::Value = openapi_response.json();
    assert_eq!(openapi_body["openapi"], "3.0.0");
    assert_eq!(openapi_body["info"]["title"], "SPEAR Metadata Server API");
    assert!(openapi_body["paths"].is_object());

    // 2. Test Swagger UI endpoint / 测试Swagger UI端点
    let swagger_response = server.get("/swagger-ui/").await;

    swagger_response.assert_status_ok();
    let swagger_body = swagger_response.text();
    assert!(swagger_body.contains("Swagger UI"));
    assert!(swagger_body.contains("openapi.json"));

    // 3. Test health check endpoint / 测试健康检查端点
    let health_response = server.get("/health").await;

    health_response.assert_status_ok();
    let health_body: serde_json::Value = health_response.json();
    assert_eq!(health_body["status"], "healthy");
    assert!(health_body["timestamp"].is_string());
}

#[tokio::test]
async fn test_http_concurrent_operations() {
    // Test concurrent HTTP operations / 测试并发HTTP操作
    let (server, _grpc_handle) = http_test_utils::create_test_http_server().await;

    // Register multiple nodes sequentially (since TestServer doesn't support clone) / 顺序注册多个节点（因为TestServer不支持克隆）
    let mut responses = Vec::new();
    for i in 0..5 {
        let node_json = json!({
            "ip_address": format!("192.168.1.{}", 100 + i),
            "port": 8080 + i,
            "metadata": {
                "index": i.to_string(),
                "env": "test"
            }
        });

        let response = server.post("/api/v1/nodes").json(&node_json).await;

        response.assert_status(axum::http::StatusCode::CREATED);
        let body: serde_json::Value = response.json();
        let uuid = body["node_uuid"].as_str().unwrap().to_string();
        responses.push(uuid);
    }

    // All registrations completed / 所有注册完成
    let registered_uuids = responses;

    // Verify all nodes were registered / 验证所有节点都已注册
    let list_response = server.get("/api/v1/nodes").await;

    list_response.assert_status_ok();
    let list_body: serde_json::Value = list_response.json();
    let nodes = list_body["nodes"].as_array().unwrap();
    assert_eq!(nodes.len(), 5);

    for uuid in &registered_uuids {
        assert!(nodes
            .iter()
            .any(|n| n["uuid"].as_str() == Some(uuid.as_str())));
    }

    // Perform sequential heartbeats (since TestServer doesn't support clone) / 执行顺序心跳（因为TestServer不支持克隆）
    for (i, uuid) in registered_uuids.iter().enumerate() {
        let heartbeat_json = json!({
            "health_info": {
                "cpu_usage": format!("{}.0", 30 + i * 10),
                "memory_usage": format!("{}.0", 40 + i * 5)
            }
        });

        let response = server
            .post(&format!("/api/v1/nodes/{}/heartbeat", uuid))
            .json(&heartbeat_json)
            .await;

        response.assert_status_ok();
    }
}

#[tokio::test]
async fn test_http_content_types() {
    // Test different content types / 测试不同的内容类型
    let (server, _grpc_handle) = http_test_utils::create_test_http_server().await;

    // 1. Test JSON content type / 测试JSON内容类型
    let node_json = json!({
        "ip_address": "192.168.1.100",
        "port": 8080,
        "metadata": {}
    });

    let json_response = server
        .post("/api/v1/nodes")
        .add_header(
            axum::http::HeaderName::from_static("content-type"),
            axum::http::HeaderValue::from_static("application/json"),
        )
        .json(&node_json)
        .await;

    json_response.assert_status(axum::http::StatusCode::CREATED);

    // 2. Test response content type / 测试响应内容类型
    let list_response = server.get("/api/v1/nodes").await;

    list_response.assert_status_ok();
    assert!(list_response.headers()["content-type"]
        .to_str()
        .unwrap()
        .contains("application/json"));

    // 3. Test OpenAPI content type / 测试OpenAPI内容类型
    let openapi_response = server.get("/api/openapi.json").await;

    openapi_response.assert_status_ok();
    assert!(openapi_response.headers()["content-type"]
        .to_str()
        .unwrap()
        .contains("application/json"));

    // 4. Test Swagger UI content type / 测试Swagger UI内容类型
    let swagger_response = server.get("/swagger-ui/").await;

    swagger_response.assert_status_ok();
    assert!(swagger_response.headers()["content-type"]
        .to_str()
        .unwrap()
        .contains("text/html"));
}
